Revert "opened packages moved to resource directory for sharing between modules"
This reverts commit 9ba0fcd178f64192999251cbe532eb4890ed1015.

GitOrigin-RevId: d9f55c8829a7018527ccc3356e3607d29c1c6eab